--- a/src/App.css
+++ b/src/App.css
@@ -8210,23 +8210,23 @@ nav ul li a:hover {
 
 /**Stock*/
 body {
-  padding-top: 40px;
-  height: 100vh;
-  background-color: #036;
-  background: linear-gradient(#004e92, #000428);
-  background-attachment: fixed;
-  font-family: 'Open Sans', sans-serif;
+  /*padding-top: 40px;*/
+  /*height: 100vh;*/
+  /*background-color: #036;*/
+  /*background: linear-gradient(#004e92, #000428);*/
+  /*background-attachment: fixed;*/
+  /*font-family: 'Open Sans', sans-serif;*/
 }
 
 .stock {
-  display: flex;
+  /*display: flex;*/
   flex-direction: column;
   align-items: center;
   justify-content: center;
   border: 1px solid black;
   box-sizing: border-box;
   font-size: 0.8rem;
-  height: 100px;
+  /*height: 100px;*/
 }
 
 .v-center {
